...
        )
        LazyVerticalGrid(
            columns = GridCells.Adaptive(160.dp),
            contentPadding = PaddingValues(16.dp),
            horizontalArrangement = Arrangement.spacedBy(16.dp),
            verticalArrangement = Arrangement.spacedBy(16.dp),
            modifier = modifier.testTag("AnimeList")
        ) {
            items(animeList) { animeList ->
                AnimeItem(
                    imageUrl = animeList.anime.imageUrl,
                    title = animeList.anime.title,
                    modifier = modifier.clickable { navigateToDetail(animeList.anime.id) }
...
