...
        BottomNavigation {
            val aboutPage = stringResource(id = R.string.profile)
            navigationItem.map { item ->
                BottomNavigationItem(
                    icon = { Icon(
                        imageVector = item.icon,
                        contentDescription = if (item.title == aboutPage) "about_page" else item.title
                    ) },
                    label = { Text(text = item.title) },
                    selected = currentRoute == item.screen.route,
                    onClick = {
                        navController.navigate(item.screen.route) {
                            popUpTo(navController.graph.findStartDestination().id) { saveState = true }
...
